--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -4,4 +4,5 @@ metadata:
   name: ts-next-template-secrets
 type: Opaque
 data:
-  MYSQL_PASSWORD: 密码
+  # 注意：密码需要使用 base64 编码
+  MYSQL_PASSWORD: YmFzZTY0X2VuY29kZWRfcGFzc3dvcmQ=
