--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -3,6 +3,10 @@ kind: ConfigMap
 metadata:
   name: ts-next-template-config
 data:
-  MYSQL_HOST: 'mysql-service'
+  # 使用已存在的 MySQL 服务地址
+  MYSQL_HOST: 'existing-mysql-service'
   MYSQL_USER: 'app_user'
   MYSQL_DATABASE: 'mydb'
+  # 添加其他应用配置
+  NODE_ENV: 'production'
+  NEXT_TELEMETRY_DISABLED: '1'
