--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,12 +32,36 @@ jobs:
           cache-from: type=registry,ref=liushuodocker/ts-next-template-base:buildcache
           cache-to: type=registry,ref=liushuodocker/ts-next-template-base:buildcache,mode=max
 
-      - name: 构建并推送应用镜像
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: liushuodocker/ts-next-template:latest,liushuodocker/ts-next-template:${{ github.sha }}
-          cache-from: type=registry,ref=liushuodocker/ts-next-template:buildcache
-          cache-to: type=registry,ref=liushuodocker/ts-next-template:buildcache,mode=max
+      - name: Build Application Docker Image
+
+        on:
+          push:
+            branches: ['main']
+          pull_request:
+            branches: ['main']
+
+        jobs:
+          build:
+            runs-on: ubuntu-latest
+
+            steps:
+              - uses: actions/checkout@v4
+
+              - name: 登录到 Docker Hub
+                uses: docker/login-action@v3
+                with:
+                  username: ${{ secrets.DOCKER_USERNAME }}
+                  password: ${{ secrets.DOCKER_PASSWORD }}
+
+              - name: 设置 Docker Buildx
+                uses: docker/setup-buildx-action@v3
+
+              - name: 构建并推送应用镜像
+                uses: docker/build-push-action@v5
+                with:
+                  context: .
+                  file: ./Dockerfile
+                  push: true
+                  tags: liushuodocker/ts-next-template:latest,liushuodocker/ts-next-template:${{ github.sha }}
+                  cache-from: type=registry,ref=liushuodocker/ts-next-template:buildcache
+                  cache-to: type=registry,ref=liushuodocker/ts-next-template:buildcache,mode=max
