--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,8 +3,12 @@ name: Docker Image CI
 on:
   push:
     branches: ['main']
+    paths-ignore:
+      - 'Dockerfile.base' # 当 Dockerfile.base 变更时不触发此工作流
   pull_request:
     branches: ['main']
+    paths-ignore:
+      - 'Dockerfile.base' # 当 Dockerfile.base 变更时不触发此工作流
 
 jobs:
   build:
@@ -22,46 +26,12 @@ jobs:
       - name: 设置 Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 构建并推送基础镜像
+      - name: 构建并推送应用镜像
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.base
+          file: ./Dockerfile
           push: true
-          tags: liushuodocker/ts-next-template-base:latest
-          cache-from: type=registry,ref=liushuodocker/ts-next-template-base:buildcache
-          cache-to: type=registry,ref=liushuodocker/ts-next-template-base:buildcache,mode=max
-
-      - name: Build Application Docker Image
-
-        on:
-          push:
-            branches: ['main']
-          pull_request:
-            branches: ['main']
-
-        jobs:
-          build:
-            runs-on: ubuntu-latest
-
-            steps:
-              - uses: actions/checkout@v4
-
-              - name: 登录到 Docker Hub
-                uses: docker/login-action@v3
-                with:
-                  username: ${{ secrets.DOCKER_USERNAME }}
-                  password: ${{ secrets.DOCKER_PASSWORD }}
-
-              - name: 设置 Docker Buildx
-                uses: docker/setup-buildx-action@v3
-
-              - name: 构建并推送应用镜像
-                uses: docker/build-push-action@v5
-                with:
-                  context: .
-                  file: ./Dockerfile
-                  push: true
-                  tags: liushuodocker/ts-next-template:latest,liushuodocker/ts-next-template:${{ github.sha }}
-                  cache-from: type=registry,ref=liushuodocker/ts-next-template:buildcache
-                  cache-to: type=registry,ref=liushuodocker/ts-next-template:buildcache,mode=max
+          tags: liushuodocker/ts-next-template:latest,liushuodocker/ts-next-template:${{ github.sha }}
+          cache-from: type=registry,ref=liushuodocker/ts-next-template:buildcache
+          cache-to: type=registry,ref=liushuodocker/ts-next-template:buildcache,mode=max
