--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,49 +1,87 @@
-name: Build Base Docker Image
+name: Docker Build and Push
 
 on:
   push:
-    branches: ['main']
-    paths:
-      - 'Dockerfile.base'
-  pull_request:
-    branches: ['main']
-    paths:
-      - 'Dockerfile.base'
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
-  build:
+  check-base-changes:
     runs-on: ubuntu-latest
-    env:
-      NODE_VERSION: 22.0.0
+    outputs:
+      base_changed: ${{ steps.check-changes.outputs.base_changed }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+        with:
+          fetch-depth: 2
+
+      - id: check-changes
+        name: Check if base files changed
+        run: |
+          git diff --name-only HEAD^ HEAD > changed_files.txt
+          if grep -q -E 'build-docker/(Dockerfile\.base|entrypoint\.sh|debian\.sources)' changed_files.txt; then
+            echo "base_changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "base_changed=false" >> $GITHUB_OUTPUT
+          fi
+
+  build-base:
+    needs: check-base-changes
+    if: needs.check-base-changes.outputs.base_changed == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Cache Docker layers
-        uses: actions/cache@v3
+      - name: Build and push base image
+        uses: docker/build-push-action@v5
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ hashFiles('Dockerfile.base') }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+          context: ./build-docker
+          file: ./build-docker/Dockerfile.base
+          push: true
+          tags: |
+            liushuodocker/ts-next-template-base:latest
+            liushuodocker/ts-next-template-base:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          provenance: false
 
-      - name: Build and push
-        uses: docker/build-push-action@v4
+  build-app:
+    needs: [check-base-changes, build-base]
+    if: always() && (needs.check-base-changes.outputs.base_changed == 'false' || needs.build-base.result == 'success')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push app image
+        uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.base
+          file: ./build-docker/Dockerfile
           push: true
-          tags: liushuodocker/ts-next-template-base:${{ env.NODE_VERSION }},liushuodocker/ts-next-template-base:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-          build-args: |
-            NODE_VERSION=${{ env.NODE_VERSION }}
+          tags: |
+            liushuodocker/ts-next:latest
+            liushuodocker/ts-next:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          provenance: false
