--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -25,23 +25,23 @@ spec:
             - name: MYSQL_HOST
               valueFrom:
                 configMapKeyRef:
-                  name: ts-next-template-config
-                  key: MYSQL_HOST
+                  name: app-config
+                  key: mysql.host
             - name: MYSQL_USER
               valueFrom:
                 configMapKeyRef:
-                  name: ts-next-template-config
-                  key: MYSQL_USER
+                  name: app-config
+                  key: mysql.user
             - name: MYSQL_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: ts-next-template-secrets
-                  key: MYSQL_PASSWORD
+                  name: db-secret
+                  key: password
             - name: MYSQL_DATABASE
               valueFrom:
                 configMapKeyRef:
-                  name: ts-next-template-config
-                  key: MYSQL_DATABASE
+                  name: app-config
+                  key: mysql.database
             - name: NODE_ENV
               valueFrom:
                 configMapKeyRef:
