--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "e2e": "playwright test",
     "e2e:ui": "playwright test --ui",
     "e2e:report": "playwright show-report",
+    "e2e:flow-chrome": "playwright test e2e/flow-chrome.spec.ts --project=chromium",
     "generate-db-types": "tsx scripts/generate-db-types.ts",
     "create-test-data": "tsx scripts/create-test-data.ts"
   },
