--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "e2e": "playwright test",
-    "e2e:ui": "playwright test --ui",
+    "e2e": "playwright test --project=chrome-latest --project=chrome-78",
+    "e2e:ui": "playwright test --ui --project=chrome-latest --project=chrome-78",
     "e2e:report": "playwright show-report",
-    "e2e:flow-chrome": "playwright test e2e/flow-chrome.spec.ts --project=chromium",
     "generate-db-types": "tsx scripts/generate-db-types.ts",
-    "create-test-data": "tsx scripts/create-test-data.ts"
+    "create-test-data": "tsx scripts/create-test-data.ts",
+    "test:chrome": "playwright test --project=chrome-latest",
+    "test:chrome-78": "playwright test --project=chrome-78",
+    "test:chrome-all": "playwright test --project=chrome-latest --project=chrome-78 ",
+    "test:chrome-components": "playwright test e2e/chrome-components.spec.ts",
+    "test:chrome-versions": "playwright test e2e/browser-versions.spec.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
