--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test:chrome-78": "playwright test --project=chrome-78",
     "test:chrome-all": "playwright test --project=chrome-latest --project=chrome-78 ",
     "test:chrome-components": "playwright test e2e/chrome-components.spec.ts",
-    "test:chrome-versions": "playwright test e2e/browser-versions.spec.ts"
+    "test:chrome-versions": "playwright test e2e/browser-versions.spec.ts",
+    "flatc:generate": "flatc -o generated --ts schemas/kline.fbs && flatc -o wasm-cal/src --rust schemas/kline.fbs"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -57,6 +58,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
+    "flatbuffers": "^25.2.10",
     "immer": "^10.1.1",
     "lightweight-charts": "^5.0.4",
     "lucide-react": "^0.477.0",
