--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -27,6 +27,11 @@ spec:
                 configMapKeyRef:
                   name: ts-next-template-config
                   key: MYSQL_HOST
+            - name: MYSQL_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: ts-next-template-config
+                  key: MYSQL_PORT
             - name: MYSQL_USER
               valueFrom:
                 configMapKeyRef:
