--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -5,6 +5,7 @@ metadata:
 data:
   # 使用已存在的 MySQL 服务地址
   MYSQL_HOST: 'existing-mysql-service'
+  MYSQL_PORT: '3306'
   MYSQL_USER: 'app_user'
   MYSQL_DATABASE: 'mydb'
   # 添加其他应用配置
