--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -3,11 +3,11 @@ kind: ConfigMap
 metadata:
   name: ts-next-template-config
 data:
-  # 使用已存在的 MySQL 服务地址
-  MYSQL_HOST: 'existing-mysql-service'
+  # MySQL 连接配置
+  MYSQL_HOST: 'mysql'
   MYSQL_PORT: '3306'
-  MYSQL_USER: 'app_user'
-  MYSQL_DATABASE: 'mydb'
+  MYSQL_USER: 'root'
+  MYSQL_DATABASE: 'dataalchemist'
   # 添加其他应用配置
   NODE_ENV: 'production'
   NEXT_TELEMETRY_DISABLED: '1'
