--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -9,11 +9,21 @@ spec:
   selector:
     matchLabels:
       app: ts-next-template
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     metadata:
       labels:
         app: ts-next-template
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
       containers:
         - name: ts-next-template
           image: liushuodocker/ts-next:latest
@@ -48,35 +58,11 @@ spec:
                   name: ts-next-template-config
                   key: MYSQL_DATABASE
             - name: NODE_ENV
-              valueFrom:
-                configMapKeyRef:
-                  name: ts-next-template-config
-                  key: NODE_ENV
-            - name: NEXT_TELEMETRY_DISABLED
-              valueFrom:
-                configMapKeyRef:
-                  name: ts-next-template-config
-                  key: NEXT_TELEMETRY_DISABLED
+              value: "production"
             - name: PORT
-              valueFrom:
-                configMapKeyRef:
-                  name: ts-next-template-config
-                  key: PORT
+              value: "3000"
             - name: HOSTNAME
-              valueFrom:
-                configMapKeyRef:
-                  name: ts-next-template-config
-                  key: HOSTNAME
-            - name: SCHEDULER_API_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: ts-next-template-config
-                  key: SCHEDULER_API_URL
-            - name: SCHEDULER_API_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: scheduler-secret
-                  key: api-key
+              value: "0.0.0.0"
           resources:
             limits:
               cpu: '1'
@@ -89,10 +75,32 @@ spec:
               path: /
               port: http
             initialDelaySeconds: 10
-            periodSeconds: 10
+            periodSeconds: 5
+            timeoutSeconds: 3
+            successThreshold: 1
+            failureThreshold: 3
           livenessProbe:
             httpGet:
               path: /
               port: http
             initialDelaySeconds: 30
-            periodSeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            successThreshold: 1
+            failureThreshold: 3
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+            readOnlyRootFilesystem: true
+          volumeMounts:
+            - name: tmp
+              mountPath: /tmp
+            - name: logs
+              mountPath: /app/logs
+      volumes:
+        - name: tmp
+          emptyDir: {}
+        - name: logs
+          emptyDir: {}
