--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: wasm-build
-          path: wasm-cal/pkg
+          path: public/wasm-cal
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
