--- a/k8s/mysql/service.yaml
+++ b/k8s/mysql/service.yaml
@@ -8,7 +8,7 @@ spec:
   selector:
     app: mysql
   ports:
-  - port: 3306
-    targetPort: 3306
-    name: mysql
+    - port: 3306
+      targetPort: 3306
+      protocol: TCP
   type: ClusterIP 
