--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -5,20 +5,9 @@ resources:
   - app/deployment.yaml
   - app/service.yaml
   - app/ingress.yaml
+  - app/pvc.yaml
+  - app/configmap.yaml
   - mysql/deployment.yaml
   - mysql/service.yaml
   - mysql/pvc.yaml
   - mysql/secret.yaml
-
-commonLabels:
-  app: ts-next-template
-
-configMapGenerator:
-  - name: ts-next-template-config
-    literals:
-      - NEXT_PUBLIC_API_URL=http://localhost:3000
-      - NODE_ENV=production
-      - MYSQL_HOST=mysql
-      - MYSQL_PORT=3306
-      - MYSQL_DATABASE=dataalchemist
-      - MYSQL_USER=root
