--- a/k8s/app/ingress.yaml
+++ b/k8s/app/ingress.yaml
@@ -3,19 +3,23 @@ kind: Ingress
 metadata:
   name: ts-next-template-ingress
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
+    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
+    nginx.ingress.kubernetes.io/proxy-body-size: '8m'
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
+    nginx.ingress.kubernetes.io/proxy-read-timeout: '30'
+    nginx.ingress.kubernetes.io/proxy-send-timeout: '30'
 spec:
+  ingressClassName: nginx
   rules:
-    - host: ts-next-template.local  # 本地开发环境使用
+    - host: ts-next-template.local
       http:
         paths:
-          - path: /(.*)
-            pathType: Prefix
+          - path: /datamgr_flow(/.*)?
+            pathType: ImplementationSpecific # 前缀匹配
             backend:
               service:
                 name: ts-next-template-service
                 port:
-                  number: 80 
+                  number: 3000
