--- a/k8s/app/configmap.yaml
+++ b/k8s/app/configmap.yaml
@@ -9,7 +9,6 @@ data:
   MYSQL_PORT: '3306'
   MYSQL_USER: 'root'
   NEXT_TELEMETRY_DISABLED: '1'
-  # NODE_ENV: "production"
-  NODE_ENV: 'development'
+  NODE_ENV: "production"
   PORT: '3000'
   SCHEDULER_API_URL: 'http://scheduler-service:8080'
