fix: add scheduler api url

--- a/k8s/app/deployment.yaml
+++ b/k8s/app/deployment.yaml
@@ -56,6 +56,11 @@ spec:
                 configMapKeyRef:
                   name: ts-next-template-config
                   key: PORT
+            - name: SCHEDULER_API_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: ts-next-template-config
+                  key: SCHEDULER_API_URL
           resources:
             requests:
               cpu: '0.8'
