--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "format:check": "prettier --check .",
     "prepare": "husky",
     "commit": "cz",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "vitest",
+    "test:unit": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "e2e": "playwright test --project=chrome-latest --project=chrome-78",
     "e2e:ui": "playwright test --ui --project=chrome-latest --project=chrome-78",
     "e2e:report": "playwright show-report",
@@ -89,20 +90,21 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
     "commitizen": "^4.3.1",
     "csv-parse": "^5.6.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "eslint-config-prettier": "^10.0.2",
+    "happy-dom": "^15.11.6",
     "husky": "^9.1.7",
     "isomorphic-fetch": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^25.0.1",
     "lint-staged": "^15.4.3",
     "next": "^15.3.2",
     "prettier": "^3.5.3",
@@ -112,7 +114,9 @@
     "ts-jest": "^29.2.6",
     "tsx": "^4.19.3",
     "typescript": "^5",
-    "undici": "^7.10.0"
+    "undici": "^7.10.0",
+    "vitest": "^2.1.8",
+    "vitest-mock-extended": "^2.0.2"
   },
   "config": {
     "commitizen": {
