--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "test:unit": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "e2e": "playwright test --project=chrome-latest --project=chrome-78",
-    "e2e:ui": "playwright test --ui --project=chrome-latest --project=chrome-78",
+    "e2e": "playwright test --project=chrome-latest",
+    "e2e:ui": "playwright test --ui --project=chrome-latest",
     "e2e:report": "playwright show-report",
     "generate-db-types": "tsx scripts/generate-db-types.ts",
     "create-test-data": "tsx scripts/create-test-data.ts",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts",
     "test:chrome": "playwright test --project=chrome-latest",
     "test:chrome-78": "playwright test --project=chrome-78",
     "test:chrome-all": "playwright test --project=chrome-latest --project=chrome-78 ",
@@ -65,7 +69,7 @@
     "immer": "^10.1.1",
     "jose": "^6.0.11",
     "lightweight-charts": "^5.0.4",
-    "lucide-react": "^0.477.0",
+    "lucide-react": "^0.511.0",
     "mysql2": "^3.13.0",
     "nanoid": "^5.1.2",
     "pg": "^8.16.0",
@@ -86,27 +90,31 @@
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.50.1",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.0.9",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/isomorphic-fetch": "^0.0.39",
     "@types/node": "^20",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19",
-    "@vitest/coverage-v8": "^2.1.8",
-    "@vitest/ui": "^2.1.8",
+    "@vitejs/plugin-react": "^4.5.0",
+    "@vitest/coverage-v8": "^3.1.4",
+    "@vitest/ui": "^3.1.4",
+    "autoprefixer": "^10.4.21",
     "commitizen": "^4.3.1",
     "csv-parse": "^5.6.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "eslint-config-prettier": "^10.0.2",
-    "happy-dom": "^15.11.6",
+    "happy-dom": "^17.5.6",
     "husky": "^9.1.7",
     "isomorphic-fetch": "^3.0.0",
-    "jsdom": "^25.0.1",
+    "jsdom": "^26.1.0",
     "lint-staged": "^15.4.3",
     "next": "^15.3.2",
+    "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prisma": "^6.8.2",
     "tailwindcss": "^4",
@@ -115,8 +123,8 @@
     "tsx": "^4.19.3",
     "typescript": "^5",
     "undici": "^7.10.0",
-    "vitest": "^2.1.9",
-    "vitest-mock-extended": "^2.0.2"
+    "vitest": "^3.1.4",
+    "vitest-mock-extended": "^3.1.0"
   },
   "config": {
     "commitizen": {
