feat: add new prd and design

--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "prepare": "husky",
     "commit": "cz",
     "test": "vitest",
-    "test:unit": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
+    "test:run": "vitest run",
+    "test:coverage": "NODE_ENV=test vitest run --coverage",
+    "test:ui": "vitest --ui",
     "e2e": "playwright test --project=chrome-latest",
     "e2e:ui": "playwright test --ui --project=chrome-latest",
     "e2e:report": "playwright show-report",
@@ -24,12 +25,12 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
-    "test:chrome": "playwright test --project=chrome-latest",
-    "test:chrome-78": "playwright test --project=chrome-78",
-    "test:chrome-all": "playwright test --project=chrome-latest --project=chrome-78 ",
-    "test:chrome-components": "playwright test e2e/chrome-components.spec.ts",
-    "test:chrome-versions": "playwright test e2e/browser-versions.spec.ts",
-    "flatc:generate": "flatc -o generated --ts schemas/kline.fbs && flatc -o wasm-cal/src --rust schemas/kline.fbs"
+    "flatc:generate": "flatc -o generated --ts schemas/kline.fbs && flatc -o wasm-cal/src --rust schemas/kline.fbs",
+    "prisma:generate": "prisma generate",
+    "prisma:db:push": "prisma db push",
+    "prisma:db:seed": "tsx prisma/seed.ts",
+    "prisma:studio": "prisma studio",
+    "prisma:migrate": "prisma migrate dev"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -73,6 +74,7 @@
     "mysql2": "^3.13.0",
     "nanoid": "^5.1.2",
     "pg": "^8.16.0",
+    "rate-limiter-flexible": "^7.1.1",
     "react": "^19.1.0",
     "react-contexify": "^6.0.0",
     "react-day-picker": "8.10.1",
