--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-import": "^2.31.0",
     "happy-dom": "^17.5.6",
     "husky": "^9.1.7",
     "isomorphic-fetch": "^3.0.0",
