--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/uuid": "^10.0.0",
     "@xyflow/react": "^12.4.4",
     "bcrypt": "^6.0.0",
+    "cache-manager": "^7.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
