--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "commit": "cz",
-    "test": "vitest",
-    "test:run": "vitest run",
-    "test:coverage": "NODE_ENV=test vitest run --coverage",
-    "test:ui": "vitest --ui",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "e2e": "playwright test --project=chrome-latest",
     "e2e:ui": "playwright test --ui --project=chrome-latest",
     "e2e:report": "playwright show-report",
@@ -57,6 +56,7 @@
     "@tanstack/react-query": "^5.67.1",
     "@tanstack/react-table": "^8.21.2",
     "@tanstack/react-virtual": "^3.13.2",
+    "@types/lru-cache": "^7.10.10",
     "@types/uuid": "^10.0.0",
     "@xyflow/react": "^12.4.4",
     "bcrypt": "^6.0.0",
@@ -72,6 +72,7 @@
     "ioredis": "^5.6.1",
     "jose": "^6.0.11",
     "lightweight-charts": "^5.0.4",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.513.0",
     "mysql2": "^3.13.0",
     "nanoid": "^5.1.5",
@@ -90,9 +91,12 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-typescript": "^7.27.1",
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/eslintrc": "^3",
+    "@jest/globals": "^30.0.1",
     "@playwright/test": "^1.50.1",
     "@tailwindcss/postcss": "^4.0.9",
     "@testing-library/jest-dom": "^6.6.3",
@@ -100,13 +104,12 @@
     "@types/bcrypt": "^5.0.2",
     "@types/ioredis": "^4.28.10",
     "@types/isomorphic-fetch": "^0.0.39",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.5.0",
-    "@vitest/coverage-v8": "^3.2.2",
-    "@vitest/ui": "^3.2.2",
     "autoprefixer": "^10.4.21",
+    "babel-jest": "^30.0.1",
     "commitizen": "^4.3.1",
     "csv-parse": "^5.6.0",
     "cz-conventional-changelog": "^3.3.0",
@@ -117,6 +120,9 @@
     "happy-dom": "^17.5.6",
     "husky": "^9.1.7",
     "isomorphic-fetch": "^3.0.0",
+    "jest": "^30.0.1",
+    "jest-environment-node": "^30.0.1",
+    "jest-extended": "^6.0.0",
     "jsdom": "^26.1.0",
     "lint-staged": "^15.4.3",
     "next": "^15.3.2",
@@ -125,12 +131,10 @@
     "prisma": "^6.9.0",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
-    "ts-jest": "^29.2.6",
+    "ts-jest": "^29.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5",
-    "undici": "^7.10.0",
-    "vitest": "^3.2.2",
-    "vitest-mock-extended": "^3.1.0"
+    "undici": "^7.10.0"
   },
   "config": {
     "commitizen": {
