--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5",
     "undici": "^7.10.0"
