--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@prisma/client": "^6.9.0",
+    "@prisma/client": "^6.10.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.3",
@@ -56,7 +56,6 @@
     "@tanstack/react-query": "^5.67.1",
     "@tanstack/react-table": "^8.21.2",
     "@tanstack/react-virtual": "^3.13.2",
-    "@types/lru-cache": "^7.10.10",
     "@types/uuid": "^10.0.0",
     "@xyflow/react": "^12.4.4",
     "bcrypt": "^6.0.0",
@@ -99,6 +98,7 @@
     "@jest/globals": "^30.0.1",
     "@playwright/test": "^1.50.1",
     "@tailwindcss/postcss": "^4.0.9",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/bcrypt": "^5.0.2",
@@ -121,6 +121,7 @@
     "husky": "^9.1.7",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^30.0.1",
+    "jest-environment-jsdom": "^30.0.2",
     "jest-environment-node": "^30.0.1",
     "jest-extended": "^6.0.0",
     "jsdom": "^26.1.0",
@@ -128,7 +129,7 @@
     "next": "^15.3.2",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
-    "prisma": "^6.9.0",
+    "prisma": "^6.10.1",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.4.0",
@@ -142,5 +143,10 @@
       "path": "cz-conventional-changelog"
     }
   },
-  "packageManager": "pnpm@10.6.2"
+  "packageManager": "pnpm@10.6.2",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@prisma/client"
+    ]
+  }
 }
