--- a/apps/flow-service/package.json
+++ b/apps/flow-service/package.json
@@ -19,6 +19,12 @@
     "react-dom": "^19.1.0",
     "@repo/ui": "workspace:*",
     "@repo/lib": "workspace:*",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.513.0",
+    "zustand": "^4.5.2",
+    "immer": "^10.0.2",
+    "@tanstack/react-table": "^8.14.7",
+    "@tanstack/react-virtual": "^3.4.0",
     "@xyflow/react": "^12.4.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
