--- a/apps/flow-service/tsconfig.json
+++ b/apps/flow-service/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../packages/typescript-config/base.json",
+  "extends": "@repo/typescript-config/nextjs.json",
   "compilerOptions": {
     "baseUrl": ".",
     "plugins": [
@@ -7,12 +7,7 @@
         "name": "next"
       }
     ],
-    "paths": {
-      "@/*": ["./src/*"],
-      "@/app/*": ["./app/*"],
-      "@/components/*": ["./components/*"],
-      "@/lib/*": ["./lib/*"]
-    }
+    
   },
   "include": [
     "next-env.d.ts",
@@ -20,4 +15,4 @@
     "**/*.tsx",
     ".next/types/**/*.ts"
   ]
-} 
+}
