完成 src 目录迁移：移除多余的 src/ 目录，符合 Next.js 15 App Router 规范
- 迁移 admin-portal/src/* 到根目录
- 迁移 test-service/src/* 到根目录
- 处理 kline-service 目录冲突，重命名为 generated-alt/ 和 wasm-cal-alt/
- 更新所有 @/src/ 导入路径为 @/
- 验证 TypeScript 类型检查和构建成功
- 修正文档中的路径配置错误

所有迁移的应用现在都符合 Next.js 15 规范，@/ 别名正常工作

--- a/apps/flow-service/package.json
+++ b/apps/flow-service/package.json
@@ -38,6 +38,7 @@
     "@repo/next-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/jest-config": "workspace:*",
+    "@repo/database": "workspace:*",
     "typescript": "^5",
     "@types/react": "^19.1.6",
     "@types/node": "^20.19.1",
