--- a/apps/admin-portal/package.json
+++ b/apps/admin-portal/package.json
@@ -11,7 +11,12 @@
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report"
   },
   "dependencies": {
     "next": "^15.3.2",
@@ -39,7 +44,8 @@
     "eslint-config-next": "15.2.0",
     "tailwindcss": "^4.1.5",
     "@tailwindcss/postcss": "^4.1.5",
-    "postcss": "^8.5.3"
+    "postcss": "^8.5.3",
+    "@playwright/test": "^1.48.0"
   },
   "prettier": "@repo/prettier-config"
 }
