feat: update service

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "^9.21.0",
     "glob": "^11.0.3",
     "husky": "^9.1.7",
+    "jest": "^30.0.0",
     "lint-staged": "^15.4.3",
     "next": "^15.3.2",
     "prettier": "^3.5.3",
