--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -6,7 +6,12 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "exports": {
-    ".": "./src/index.ts",
+    "./browser": "./src/browser.ts",
+    "./node": "./src/node.ts",
+    ".": {
+      "browser": "./src/browser.ts",
+      "default": "./src/index.ts"
+    },
     "./auth": "./src/auth/index.ts",
     "./middleware": "./src/middleware/index.ts",
     "./services/rbac-service": "./src/services/rbac-service.ts",
