--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,6 +8,7 @@
     "./postcss": "./postcss.config.js",
     "./tailwind.config": "./tailwind.config.ts",
     "./styles": "./src/styles.css",
+    "./styles.css": "./src/styles.css",
     "./components/*": "./src/components/ui/*",
     "./lib/utils": "./src/lib/utils.ts",
     "./components": "./src/components.ts",
