Based on the git diff, here's a concise and descriptive commit message:
Refactor auth event handling and enhance WASM kline configuration

- Simplify auth event listener in AuthProvider using direct callbacks
- Reorganize auth module file structure and imports
- Add config/theme getters and update handling in WASM kline processor
- Implement forced re-render on theme/config changes
- Improve WASM error logging and serde serialization
- Update token management and JWT utilities
- Add documentation for SERDE optimization and E2E setup
- Adjust gitignore patterns and lockfile dependencies

Key changes:
1. AuthProvider now uses direct callback methods (`onTokenRefreshed`, `onRefreshFailed`) instead of event switch cases
2. WASM kline processor adds config/theme management with serde-wasm-bindgen
3. New documentation files added for optimization and testing
4. Token storage and API client implementations updated
5. Database schema and seed files modified

--- a/apps/admin-portal/tsconfig.json
+++ b/apps/admin-portal/tsconfig.json
@@ -3,7 +3,13 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/app/*": ["./app/*"],
+      "@/components/*": ["./components/*"],
+      "@/hooks/*": ["./hooks/*"],
+      "@/lib/*": ["./lib/*"],
+      "@/providers/*": ["./providers/*"],
+      "@/types/*": ["./types/*"]
     },
     "plugins": [
       {
