--- a/apps/kline-service/wasm-cal/Cargo.toml
+++ b/apps/kline-service/wasm-cal/Cargo.toml
@@ -33,6 +33,7 @@ chrono = { version = "0.4.40" }
 ordered-float = "5.0.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.141"
+serde-wasm-bindgen = "0.6"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.39"
