Refactor performance monitoring and integrate FPS tracker
- Replace legacy performance monitor with dedicated FPS tracking module
- Simplify performance data structure by removing redundant render metrics
- Implement JS memory usage tracking in WASM layer
- Add real-time FPS monitoring with stats display in performance panel
- Remove unused throttle utility and performance monitor files
- Enhance render performance measurement with operation timing
- Update WASM build artifacts to reflect core changes
- Improve console logging for performance debugging

--- a/apps/kline-service/wasm-cal/Cargo.toml
+++ b/apps/kline-service/wasm-cal/Cargo.toml
@@ -20,6 +20,9 @@ web-sys = { version = "0.3.77", features = [
   "WheelEvent",
   "TextMetrics",
   "Performance",
+  "PerformanceEntry",
+  "PerformanceMeasure",
+  "PerformanceMark",
   "Window",
 ] }
 js-sys = "0.3.77"
