Add heatmap data caching to improve rendering performance
Implement caching for heatmap bin calculations in HeatRenderer. The cache stores the computed bins and global max bin value when the visible range and price parameters remain unchanged, reducing redundant computations during rendering.

- Introduce HeatmapCacheKey and HeatmapCacheData structs
- Use RefCell for interior mutability in cache fields
- Check cache validity before recalculating bins

--- a/apps/kline-service/package.json
+++ b/apps/kline-service/package.json
@@ -9,7 +9,7 @@
     "start": "next start -p 3003",
     "flatc:generate": "flatc -o ./src/generated --ts ./schemas/kline.fbs && flatc -o ./src/wasm-cal/src --rust ./schemas/kline.fbs",
     "wasm:test": "cd wasm-cal && wasm-pack test --headless --chrome",
-    "wasm:build": "cd wasm-cal && wasm-pack build --target web --out-dir pkg"
+    "wasm:build": "cd wasm-cal && ./build.sh"
   },
   "dependencies": {
     "next": "^15.4.5",
