--- a/apps/kline-service/wasm-cal/Cargo.toml
+++ b/apps/kline-service/wasm-cal/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 default = []
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 web-sys = { version = "0.3.77", features = [
