--- a/apps/oauth-service-rust/.env.example
+++ b/apps/oauth-service-rust/.env.example
@@ -10,8 +10,12 @@
 # SQLite (开发环境)
 DATABASE_URL=sqlite:./oauth.db
 
-# MySQL (生产环境推荐)
-# DATABASE_URL=mysql://oauth_user:STRONG_PASSWORD@mysql-host:3306/oauth_db?ssl-mode=REQUIRED
+# PostgreSQL / Supabase (生产环境推荐)
+# 使用 Supabase 云数据库: https://supabase.com
+# DATABASE_URL=postgresql://postgres.YOUR_PROJECT:PASSWORD@db.YOUR_PROJECT.supabase.co:5432/postgres?sslmode=require
+#
+# 使用自托管 PostgreSQL:
+# DATABASE_URL=postgresql://oauth_user:STRONG_PASSWORD@postgres-host:5432/oauth_db?sslmode=require
 
 # ================================
 # JWT 配置
